# torch-onnx

./: .gitignore  .lintrunner.toml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yaml
src/torch_onnx/: __init__.py  _analysis.py  _building.py  _capture_strategies.py  _capture_strategies_test.py  _core.py  _core_test.py  _decomp.py  _dispatcher.py  _dispatching.py  _fx_minifier.py  _fx_passes.py  _ir_passes.py  _isolated.py  _onnx_program.py  _patch.py  _registration.py  _reporting.py  _schemas.py  _schemas_test.py  _tensor.py  _tensors.py  _tensors_test.py  _testing.py  _torchscript_converter.py  _tracer.py  _validation.py  _verification.py  errors.py  testing.py
src/torch_onnx/ops/: __init__.py  __init__.pyi  _impl.py  _impl_backup.py  _quantization.py  ops_test.py
src/torch_onnx/ops/_testing/: onnx_opinfo.py
src/torch_onnx/tools/: diff_model.py
src/torch_onnx/torch_lib/: _constants.py  _tracer.py  registration.py
src/torch_onnx/torch_lib/ops/: common.py  core.py  fft.py  linalg.py  nn.py  prims.py  special.py  vision.py
tests/: api_test.py  conditional.py  conditional_test.py  conversion_test.py  decomp_test.py  fake_tensor_test.py  gpt2.py  jit_test.py  longformer.py  longformer_export.py  pytorch_test.py  pytorch_test_common.py  quantization.py  quantization_test.py  resnet.py  resnet_export.py  resnet_export_test.py  rotary_embedding.py
tests/models/: llama.py  longformer.py  longformer_export.py  longformer_export_acc.py  multihead_attention_test.py  resnet.py  resnet_export_test.py  rotary_embedding.py  senet154.py  senet154_diff.py  upsample.py
tests/torch_tests/: error_reproduction.py  fx_consistency_test.py  fx_consistency_test_.py  fx_to_onnx_with_onnxruntime_test.py  fx_to_onnx_with_onnxruntime_test_.py  onnx_test_common.py  pytorch_test_common.py  torch_onnx_test.py  torch_onnx_test_.py
tools/: generate_ops.py
torch_onnx/: _patch.py
