[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-onnx"
version = "0.0.9"
description = "Experimental tools for converting PyTorch models to ONNX"
authors = [{ name = "Justin Chu", email = "justinchu@microsoft.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["onnx", "pytorch", "converter", "convertion", "exporter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["torch", "onnxscript>=0.1.0.dev20240614", "onnx"]

[project.urls]
Repository = "https://github.com/justinchuby/torch-onnx"
